game system changed